- update main.py, trainer.py and config.py to python 3 code using 2to3 - adding coco_3stages_color.yml with configurations to train with coco dataset (same settings as other config files)

--- a/code/cfg/coco_3stages_color.yml
+++ b/code/cfg/coco_3stages_color.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'coco_3stages_color'
 
-DATASET_NAME: 'train2014'
-DATA_DIR: '/content/drive/MyDrive/dataset/coco'
+DATASET_NAME: 'coco'
+DATA_DIR: '/content/drive/MyDrive/coco'
 GPU_ID: '0'
 WORKERS: 4  # 4
 
